Add notebook execution outputs and dev dependencies
Run notebooks for weeks 1, 2, 3, 5 to populate cell outputs.
Add nbconvert, jupyter-client, ipykernel as dev dependencies.
Update .gitignore to exclude generated data artifacts
(_benchmark dirs and loose .parquet files in week folders).

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ course/shared/.data_cache/
 course/week*/code/.cache/
 legacy/old_pipeline_weeks/*/code/.cache/
 
+# Generated data artifacts from notebook execution
+course/week*/_benchmark/
+course/week*/*.parquet
+
 # Logs from code execution (Step 4B)
 course/week*/code/logs/
 
