--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,3 +53,10 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[dependency-groups]
+dev = [
+    "nbconvert (>=7.17.0,<8.0.0)",
+    "jupyter-client (>=8.8.0,<9.0.0)",
+    "ipykernel (>=7.2.0,<8.0.0)"
+]
